# server

./: .gitignore  LICENSE  go.mod
acceptlanguageparser/: acceptlanguageparser.go
apps/assets/src/: configure.ac
apps/assets/src/styles/: Makefile.am  Makefile.sh  _shame.scss  autogen.sh  config.rb  csp.scss  main.scss
apps/assets/src/styles/components/: _audiolevel.scss  _audiovideo.scss  _buddylist.scss  _rightslide.scss  _roombar.scss  _settings.scss  _usability.scss
apps/assets/src/styles/global/: _animations.scss  _base.scss  _loader.scss  _nicescroll.scss  _overlaybar.scss  _variables.scss  _views.scss  _withs.scss
apps/assets/src/styles/libs/: _dialogs.scss
apps/assets/src/styles/libs/angular/: angular-csp.scss  angular.scss
apps/focusteachrtcd/: build.bat  main.go  server.conf  server.crt
apps/focusteachrtcd/html/: head.html  main.html
apps/focusteachrtcd/static/js/: app.js  base.js  main.js
apps/focusteachrtcd/static/js/controllers/: appcontroller.js  chatroomcontroller.js  contactsmanagercontroller.js  contactsmanagereditcontroller.js  controllers.js  statusmessagecontroller.js  uicontroller.js  usersettingscontroller.js
apps/focusteachrtcd/static/js/directives/: audiolevel.js  audiovideo.js  bfi.js  buddylist.js  buddypicturecapture.js  buddypictureupload.js  chat.js  contactrequest.js  defaultdialog.js  directives.js  fileinfo.js  menu.js  odfcanvas.js  onenter.js  onescape.js  page.js  pdfcanvas.js  presentation.js  roombar.js  screenshare.js  settings.js  socialshare.js  statusmessage.js  title.js  usability.js  welcome.js  youtubevideo.js
apps/focusteachrtcd/static/js/filters/: buddyimagesrc.js  displayconference.js  displaynameforsession.js  displayuserid.js  filters.js  formatbase1000.js
apps/focusteachrtcd/static/js/mediastream/: api.js  connector.js  peercall.js  peerconnection.js  peerscreenshare.js  tokens.js  usermedia.js  webrtc.js
apps/focusteachrtcd/static/js/sandboxes/: pdf.js  webodf.js  youtube.js
apps/focusteachrtcd/static/js/services/: alertify.js  appdata.js  buddydata.js  buddylist.js  buddypicture.js  chromeextension.js  connector.js  constraints.js  contactdata.js  contacts.js  continueconnector.js  desktopnotify.js  dialogs.js  enrichmessage.js  filedata.js  filedownload.js  filetransfer.js  fileupload.js  geolocation.js  localstorage.js  mediadevices.js  mediasources.js  mediastream.js  modules.js  playpromise.js  playsound.js  resturl.js  (+12 more)
apps/focusteachrtcd/static/partials/: audiovideopeer.html  buddy.html  buddyactions.html  buddyactionsforaudiomixer.html  chatroom.html  contactsmanager.html  contactsmanageredit.html  menu.html  settings.html  statusmessage.html  ui.html
apps/focusteachrtcd/static/translation/: messages-zh-cn.json
apps/rtcd/: main.go  server.conf  server.key
apps/webapp/: go.mod  main.go
apps/webapp/statik/: statik.go
channelling/: bus.go  bus_manager.go  client.go  clientstats.go  codec.go  common_test.go  config.go  connection.go  contact.go  contact_manager.go  context.go  data.go  hub.go  imagecache.go  pipeline.go  pipeline_manager.go  room_manager.go  room_manager_test.go  roomworker.go  roomworker_test.go  session.go  session_manager.go  sessionattestation.go  sessioncreator.go  sessionstore.go  sessiontoken.go  sessionupdate.go  sink.go  stats_manager.go  tickets.go  tokenprovider.go  turndata.go  unicaster.go  user.go  userstore.go
channelling/api/: api.go  api_test.go  handle_authentication.go  handle_chat.go  handle_conference.go  handle_hello.go  handle_leave.go  handle_room.go  handle_self.go  handle_sessions.go  handle_users.go
channelling/server/: api.go  config.go  pipelines.go  rooms.go  sessions.go  stats.go  tokens.go  users.go
cmd/signalsvc/: handler_image.go  handler_main.go  handler_room.go  handler_sandbox.go  handler_wellknown.go  handler_ws.go  httphandle.go  main.go  signalserver.go  signalsvc.go  types_freebsd.go  types_unix.go  utils.go  wshandle.go
cmd/statik/: statik.go
cmd/stunsvc/: stunserver.go  stunsvc.go
httputils/: content_negotiation.go  doc.go  download.go  exitstatus.go  file.go  gzip.go  log.go  server.go  static.go  welcome.go  welcome_test.go
phoenix/: common_integration_test.go  config.go  container.go  default_https_server_integration_test.go  doc.go  http_service.go  logging.go  runtime.go  server.go  services.go  tls.go  tls_1.1.go  tls_1.4.go  tls_generic.go
randomstring/: randomstring.go
sloth/: sloth.go
